# aws-rapid-prototyping-with-python

./: .gitignore  README.md  pyproject.toml  setup.cfg  template.yaml
.circleci/: config.yml
app/: app.py
provisioning/: cdk.json  package-lock.json  package.json
provisioning/lib/: api-stack.ts  database-stack.ts  provisioning-stack.ts
provisioning/test/: provisioning.test.ts
scripts/: create_pandas_package.sh  create_psycopg2_package.sh  install_pyenv.sh  install_python.sh  samlocal.sh  unittest.sh
serverless/emailImageResizer/: README.md  app.py  pyproject.toml
serverless/emailImageResizer/.chalice/: config.json.tmpl  policy.json
tests/: conftest.py
tests/unit/: test_handler.py
