[tool.poetry]
name = "python-rapid-prototyping"
version = "0.1.0"
description = ""
authors = ["studio3104 <studio3104.com@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.*"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-mock = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
