[tool.poetry]
name = "emailimageresizer"
version = "0.1.0"
description = ""
authors = ["studio3104 <studio3104.com@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
chalice = "^1.13.1"
boto3 = "^1.12.43"
pillow = "^7.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
python-language-server = "^0.31.10"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
